--- a/app/src/main/res/layout/activity_gles_process.xml
+++ b/app/src/main/res/layout/activity_gles_process.xml
@@ -16,6 +16,7 @@
         android:id="@+id/iv_output"
         android:layout_width="256dp"
         android:layout_height="256dp"
+        android:scaleType="centerCrop"
         android:contentDescription="test image" />
 
     <android.opengl.GLSurfaceView
